--- a/frontend/src/app/components/crm-confers/crm-confers.component.css
+++ b/frontend/src/app/components/crm-confers/crm-confers.component.css
@@ -1,27 +1,90 @@
+/* crm */
 .crm {
-    background-color: var(--blackFilter);
-}
-.crm h2 {
-    text-align: center;
-}
-
-.crm p {
-    text-align: center;
 }
 
 .crm__container {
-    display: grid;
-    align-items: center;
-}
-
-.crm__container tr th{
-    text-align: center;
+    width: 90%;
+    margin: 2rem auto;
 }
 
 .crm__title {
-    color:black;
+    color: var(--blanco);
 }
 
-.crm p{
-    color: black;
+.crm h2 {
+    text-align: center;
+    font-size: 4rem;
+}
+
+.wd-90 {
+    width: 90%;
+}
+
+.m-auto {
+    margin: 0 auto;
+}
+
+.crm p {
+    font-size: 2.2rem;
+    padding-left: 2rem;
+}
+
+.cont_crm {
+    display: grid;
+    background: var(--blackFilter);
+    grid-template-columns: repeat(2, 2fr) 1fr;
+    grid-auto-rows: minmax(7rem, auto);
+}
+
+.th_crm {
+    display: flex;
+    align-items: center;
+    background-color: var(--darkBlue);
+}
+
+.flex{
+    display: flex;
+    align-items: center;
+}
+
+.th_crm-content {}
+
+.th_crm__title {
+    grid-column: 1/2;
+    grid-row: 1;
+}
+
+.th_crm__hour {
+    grid-column: 2/3;
+    grid-row: 1;
+}
+
+.th_crm__status {
+    grid-column: 3/4;
+    grid-row: 1;
+}
+
+
+.tc_crm__title {
+    grid-column: 1/2;
+}
+
+.tc_crm__hour {
+    grid-column: 2/3;
+}
+
+.tc_crm__status {
+    grid-column: 3/4;
+    padding: 0 1rem;
+}
+
+.th_crm tr {}
+
+.crm__container tr th {
+    color: var(--blanco);
+    border-radius: 2rem;
+}
+
+.crm p {
+    color: var(--blanco);
 }
