--- a/frontend/src/app/components/detail-conf/detail-conf.component.html
+++ b/frontend/src/app/components/detail-conf/detail-conf.component.html
@@ -1,4 +1,4 @@
-<div class="crm">
+<!-- <div class="crm">
     <h2 class="crm crm__title">Conferencias</h2>
     <p class="mt-3">Administra las Conferencias</p>
     <div class="crm__container">
@@ -49,4 +49,57 @@
         <p class="text-center mt-10">No hay conferencias aún</p>
         }
     </div>
-</div>
+</div> -->
+<section class="crm crm__container">
+    <h2 class="crm__title wd-90 ">Conferencias</h2>
+    <p class="wd-90 m-auto">Administra las Conferencias</p>
+    <div class="crm__container" >
+        <div class="cont_crm">
+            <div class="th_crm th_crm__exp" >
+                <p >Expositor</p>
+            </div>
+            <div class="th_crm th_crm__semb" >
+                <p >Semblanza</p>
+            </div>
+            <div class="th_crm th_crm__inic">
+                <p >Hora de Inicio</p>
+            </div>
+            <div class="th_crm th_crm__fn">
+                <p >Hora de Finalizacion</p>
+            </div>
+            <div class="th_crm th_crm__place">
+                <p >Lugar</p>
+            </div>
+            <div class="th_crm th_crm__actions">
+                <p >Acciones</p>
+            </div>
+            @for (conf of dataConfs; track $index) {
+                <div class="tc_crm__exp flex" >
+                    <p >{{conf.id}}</p>
+                </div>
+                <div class="tc_crm__semb flex" >
+                    <p >{{conf.Semblanza}}</p>
+                </div>
+                <div class="tc_crm__inic flex">
+                    <p >{{conf.HoraInicio}} hrs</p>
+                </div>
+                <div class="tc_crm__fn flex">
+                    <p >{{conf.HoraFin}} hrs</p>
+                </div>
+                <div class="tc_crm__place flex">
+                    <p >{{conf.Lugar}}</p>
+                </div>
+                <div class="tc_crm__actions flex">
+                    <button 
+                        type="button" 
+                        class="btn wd-90"
+                        (click)="onSubmitAssist(conf.id)" >Asistir
+                    </button>
+                </div>
+            }
+        </div>
+        @if (dataConfs.length == 0) {
+            <p class="text-center mt-10" >No hay conferencias aún</p>
+        }
+    </div>
+</section>
