--- a/frontend/src/app/components/one-confer/one-confer.component.html
+++ b/frontend/src/app/components/one-confer/one-confer.component.html
@@ -28,10 +28,10 @@
               <label for="lugar">Lugar</label>
             </div>
             <!-- Fecha -->
-            <div class="login-content">
+            <!-- <div class="login-content">
               <input  id="fecha" type="date" formControlName="fecha" placeholder=" ">
               <label for="fecha">Fecha</label>
-            </div>
+            </div> -->
             <!-- H Inicio -->
             <div class="login-content">
               <input id="horaInicio" type="time" formControlName="horaInicio" placeholder=" ">
@@ -48,10 +48,10 @@
               <label for="semblanza">Pequeña Semblanza</label>
             </div>
             <!-- Ex. Foto -->
-            <div class="login-content">
+            <!-- <div class="login-content">
               <input id="foto" type="text" formControlName="foto" placeholder=" ">
               <label for="foto">Foto</label>
-            </div>
+            </div> -->
             <!-- Cnf. Cupo total -->
             <div class="login-content">
               <input id="cupo" type="number" formControlName="cupo" placeholder=" ">
