--- a/frontend/src/app/components/all-conferencces/all-conferencces.component.html
+++ b/frontend/src/app/components/all-conferencces/all-conferencces.component.html
@@ -1,21 +1,21 @@
 
-@if (confs.length > 0) {
-    <section class="crm crm__container">
-        <h2 class="crm__title wd-90 ">Conferencias</h2>
-        <p class="wd-90 m-auto">Conferencias por fecha</p>
-        <div class="crm__container" >
-            <div class="login__container-content">
-                <div class="login-content">
-                    <input  
-                        id="fecha" 
-                        type="date" 
-                        [(ngModel)]="dateConf" 
-                        placeholder=" "
-                        (change)="changeDate()"
-                    >
-                    <label for="fecha">Fecha</label>
+<section class="crm crm__container">
+    <h2 class="crm__title wd-90 ">Conferencias</h2>
+    <p class="wd-90 m-auto">Conferencias por fecha</p>
+    <div class="crm__container" >
+        <div class="login__container-content">
+            <div class="login-content">
+                <input  
+                id="fecha" 
+                type="date" 
+                [(ngModel)]="dateConf" 
+                placeholder=" "
+                (change)="changeDate()"
+                >
+                <label for="fecha">Fecha</label>
                 </div>
             </div>
+            @if (confs.length > 0) {
             <div class="cont_crm">
                 <div class="th_crm th_crm__exp" >
                     <p >Expositor</p>
@@ -37,7 +37,9 @@
                 </div>
                 @for (conf of confs; track $index) {
                     <div class="tc_crm__exp flex" >
-                        <p >{{conf._id}}</p>
+                        <p>
+                            <img [src]="conf.Horario.Expositor.Foto" alt="">
+                        </p> 
                     </div>
                     <div class="tc_crm__semb flex" >
                         <p >{{conf.Horario.Expositor.Semblanza}}</p>
@@ -46,7 +48,7 @@
                         <p >{{conf.Horario.HoraInicio}} hrs</p>
                     </div>
                     <div class="tc_crm__fn flex">
-                        <p >{{conf.Horario.Fecha}} hrs</p>
+                        <p >{{conf.Horario.Fecha | date:'dd/MM/yyyy'}}</p>
                     </div>
                     <div class="tc_crm__place flex">
                         <p >{{conf.Horario.Lugar}}</p>
@@ -56,29 +58,30 @@
                     </div>
                 }
             </div>
+            }@else {
+                <p class="text-center mt-10" >No hay conferencias aún</p>
+            }
         </div>
     </section>
-}@else {
-    <p class="text-center mt-10" >No hay conferencias aún</p>
-}
 
 @defer (on viewport) {
-    @if (confs.length > 0) {
-        <section class="crm crm__container">
-            <p class="wd-90 m-auto">Conferencias Cupo Lleno</p>
+    <section class="crm crm__container">
+        <p class="wd-90 m-auto">Conferencias Cupo Lleno</p>
             <div class="crm__container" >
                 <div class="login__container-content">
                     <div class="login-content">
                         <input  
                             id="fecha" 
                             type="date" 
-                            [(ngModel)]="dateConf" 
+                            [(ngModel)]="dateConfSold" 
                             placeholder=" "
                             (change)="changeDateSold()"
                         >
                         <label for="fecha">Fecha</label>
                     </div>
                 </div>
+                
+                @if (confsSold.length > 0) {
                 <div class="cont_crm">
                     <div class="th_crm th_crm__exp" >
                         <p >Expositor</p>
@@ -98,9 +101,11 @@
                     <div class="th_crm th_crm__actions">
                         <p >Acciones</p>
                     </div>
-                    @for (conf of confs; track $index) {
+                    @for (conf of confsSold; track $index) {
                         <div class="tc_crm__exp flex" >
-                            <p >{{conf._id}}</p>
+                            <p>
+                                <img [src]="conf.Horario.Expositor.Foto" alt="">
+                            </p>
                         </div>
                         <div class="tc_crm__semb flex" >
                             <p >{{conf.Horario.Expositor.Semblanza}}</p>
@@ -109,7 +114,7 @@
                             <p >{{conf.Horario.HoraInicio}} hrs</p>
                         </div>
                         <div class="tc_crm__fn flex">
-                            <p >{{conf.Horario.Fecha}} hrs</p>
+                            <p >{{conf.Horario.Fecha | date:'dd/MM/yyyy'}}</p>
                         </div>
                         <div class="tc_crm__place flex">
                             <p >{{conf.Horario.Lugar}}</p>
@@ -119,11 +124,11 @@
                         </div>
                     }
                 </div>
+            }@else {
+                <p class="text-center mt-10" >No hay conferencias aún</p>
+            }
             </div>
         </section>
-    }@else {
-        <p class="text-center mt-10" >No hay conferencias aún</p>
-    }
 }@placeholder { 
     <p>loading...</p>
 }
