--- a/frontend/src/app/components/statistics/statistics.component.css
+++ b/frontend/src/app/components/statistics/statistics.component.css
@@ -38,7 +38,7 @@
 .cont_crm {
     display: grid;
     background: var(--blackFilter);
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(7, 1fr);
     grid-auto-rows: minmax(7rem, auto);
 }
 
@@ -55,12 +55,12 @@
 
 .th_crm-content {}
 
-.th_crm__exp {
+.th_crm__title {
     grid-column: 1/2;
     grid-row: 1;
 }
 
-.th_crm__semb {
+.th_crm__date {
     grid-column: 2/3;
     grid-row: 1;
 }
@@ -71,21 +71,19 @@
 }
 
 
-.th_crm__fn {
+.th_crm__regist {
     grid-column: 4/5;
-    grid-row: 1;
-
 }
 
-.th_crm__place {
+.th_crm__lDisp {
     grid-column: 5/6;
-    grid-row: 1;
-
 }
 
-.th_crm__actions {
+.th_crm__pDisp {
     grid-column: 6/7;
-    grid-row: 1;
+
+}.th_crm__pGen {
+    grid-column: 7/8;
 }
 
 .th_crm tr {}
@@ -97,4 +95,8 @@
 
 .crm p {
     color: var(--blanco);
+}
+
+.flex {
+    justify-content: center;
 }
