Se agregaron validaciones

--- a/frontend/src/app/components/all-conferencces/all-conferencces.component.html
+++ b/frontend/src/app/components/all-conferencces/all-conferencces.component.html
@@ -27,7 +27,7 @@
                     <p >Hora de Inicio</p>
                 </div>
                 <div class="th_crm th_crm__fn">
-                    <p >Hora de Finalizacion</p>
+                    <p >Fecha</p>
                 </div>
                 <div class="th_crm th_crm__place">
                     <p >Lugar</p>
@@ -93,7 +93,7 @@
                         <p >Hora de Inicio</p>
                     </div>
                     <div class="th_crm th_crm__fn">
-                        <p >Hora de Finalizacion</p>
+                        <p >Fecha</p>
                     </div>
                     <div class="th_crm th_crm__place">
                         <p >Lugar</p>
