--- a/frontend/src/app/components/user-confs/user-confs.component.html
+++ b/frontend/src/app/components/user-confs/user-confs.component.html
@@ -18,7 +18,7 @@
                         </div>
         
                         <div class="tc_crm__hour flex">
-                            <p class=""><span >Inicio: </span>{{conf.Horario.Fecha}}</p>
+                            <p class=""><span ></span>{{conf.Horario.Fecha | date:'dd/MM/yyyy' }}</p>
                         </div>
         
                         <div class="tc_crm__status flex">
